# opensnitch

./: .gitignore  INSTALL  pyproject.toml
daemon/: go.mod
ui/: pyproject.toml
ui/i18n/: Makefile  generate_i18n.sh
