[project]
name = "opensnitch"
version = "0.1.0"
description = ""
authors = [
    {name = "Violet Eldridge",email = "github@violet-mica.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "grpcio (>=1.70.0,<2.0.0)",
    "protobuf (>=5.26.1,<6.0)",
    "qt-material (>=2.14,<3.0)",
    "grpcio-tools (>=1.70.0,<2.0.0)",
    "pyqt5 (>=5.15.11,<6.0.0)",
    "packaging (>=24.2,<25.0)",
    "slugify (>=0.0.1,<0.0.2)",
    "notify2 (>=0.3.1,<0.4.0)",
    "dbus-python (>=1.3.2,<2.0.0)",
    "pyasn (>=1.6.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
